# OpenRevise

./: .gitignore  README.md  liquid_glass.html  open-revise-intro.html  pyproject.toml
.github/workflows/: leak-guard.yml  test.yml
.salacia/: workflow.md
.salacia/specs/: default.md
config/: revision_patch_spec_template.json  source_registry.yaml
deliverable_templates/: template_registry.json
deliverable_templates/review_forms/: consort.json  consulting.json  content.json  grant.json  legal.json  neurips.json
deliverable_templates/tier1_ml/: prompt.json
deliverable_templates/tier2_medical/: prompt.json
deliverable_templates/tier3_business/: prompt.json
deliverable_templates/tier4_academic/: prompt.json
deliverable_templates/tier5_legal/: prompt.json
deliverable_templates/tier6_content/: prompt.json
ideaclaw/: __init__.py
ideaclaw/export/: __init__.py  latex.py
ideaclaw/review/: __init__.py  reviewer.py  structured.py
ideaclaw/sources/: __init__.py  citation.py  pdf_reader.py  scholar.py
ideaclaw/templates/: __init__.py  template_loader.py
output/ic-20260319-kan-vs-mlp/: pack.md
output/ic-20260319-lr-schedule/: pack.md
output/ic-20260319-moe-routing/: pack.md
output/ic-20260319-realpack/: pack.md
scripts/: check_revise_sources.py  run_revise_pipeline.py  run_revise_pipeline_v2.py  setup_runtime_py311.sh
src/openrevise/: __init__.py
tests/: test_biomed_clients.py  test_docx_missing_part.py  test_housekeeping_dryrun.py  test_label_binding_swap.py  test_leak_guard.py  test_preprint_fallback.py  test_router_default_wiring.py  test_router_dispatch.py
(+91 files in other folders)
